# ogre3ter-demo

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
CMake/Dependencies/: OGRE.cmake
Media/2.0/scripts/Compositors/: Tutorial_Terrain.compositor
Media/2.0/scripts/materials/PbsMaterials/: Pbs1.material.json  PbsMaterials.material
Media/2.0/scripts/materials/Tutorial_Terrain/: Terra.material.json
Media/Hlms/Common/Any/: Fog_piece_ps.any
Media/Hlms/Ocean/GLSL/: PixelShader_ps.glsl  Structs_piece_vs_piece_ps.glsl  Textures_piece_ps.glsl  VertexShader_vs.glsl
Media/Hlms/Pbs/Any/: PlanarReflections_piece_ps.any  Refractions_piece_ps.any
Media/Hlms/Pbs/Any/Main/: 500.Structs_piece_vs_piece_ps.any  800.PixelShader_piece_ps.any  800.VertexShader_piece_vs.any
Media/Hlms/Terra/Any/: 800.PixelShader_piece_ps.any  800.VertexShader_piece_vs.any
Media/Hlms/Terra/GLSL/PbsTerraShadows/: PbsTerraShadows_piece_vs_piece_ps.glsl
Media/materials/: cars.material  fire.particle  ground.material.json  other.material  terrain.material.json  vegetation.material  vegetation.material.json  water.material.json
Media/models/: ES_glass.mesh  ES_wheel.mesh  _Licenses.txt  boost.particle  cars.material  pine2_tall_norm-lod10.mesh  pine2_tall_norm-lod9.mesh
Media/terrain/: Terra.material.json  _terrain.txt
Media/textures/: _skies-new.txt
Media/vehicles/: ES_interior.mesh  _Licenses.txt
include/: OgrePlanarReflections.h  TerrainGame.h  TerrainGameState.h  Tutorial_TerrainGameState.h
include/Ocean/: Ocean.h
include/Ocean/Hlms/: OgreHlmsOcean.h  OgreHlmsOceanDatablock.h
include/OgreCommon/: CameraController.h  GraphicsSystem.h  TutorialGameState.h
include/Terra/: Terra.h  TerraShadowMapper.h  TerrainCell.h
include/Terra/Hlms/: OgreHlmsJsonTerra.h  OgreHlmsTerra.h  OgreHlmsTerraDatablock.h
include/Terra/Hlms/PbsListener/: OgreHlmsPbsTerraShadows.h
src/: HlmsPbs2.cpp  HlmsPbs2.h  OgrePlanarReflections.cpp  Terrain.cpp  TerrainGameState.cpp  TerrainGame_Compositor.cpp  TerrainGame_Create.cpp  TerrainGame_Update.cpp  TerrainScene.cpp  TerrainScene_Objects.cpp  TerrainScene_Sky.cpp  TerrainScene_Terrain.cpp  TerrainScene_Vegetation.cpp  TerrainScene_Water.cpp  Tutorial_Terrain.cpp  Tutorial_TerrainGameState.cpp  Tutorial_TerrainScene.cpp
src/Ocean/: Ocean.cpp
src/Ocean/Hlms/: OgreHlmsOcean.cpp  OgreHlmsOceanDatablock.cpp
src/OgreCommon/: CameraController.cpp  GraphicsSystem.cpp  TutorialGameState.cpp
src/OgreCommon/System/Desktop/: MainLoopMultiThreaded.cpp  MainLoopSingleThreaded.cpp
src/Terra/: Terra.cpp  TerraShadowMapper.cpp  TerrainCell.cpp
src/Terra/Hlms/: OgreHlmsJsonTerra.cpp  OgreHlmsTerra.cpp  OgreHlmsTerraDatablock.cpp
src/Terra/Hlms/PbsListener/: OgreHlmsPbsTerraShadows.cpp
